objects/Opportunity.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <businessProcesses>
        <fullName>Posgrado</fullName>
        <description>Proceso de ventas para posgrado</description>
        <isActive>true</isActive>
        <values>
            <fullName>Admitido para pago</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Matrícula académica</fullName>
        </values>
        <values>
            <fullName>Matrícula financiera</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Pregrado</fullName>
        <description>Proceso de ventas para pregrado</description>
        <isActive>true</isActive>
        <values>
            <fullName>Admitido para pago</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Matrícula académica</fullName>
        </values>
        <values>
            <fullName>Matrícula financiera</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EDCO Cerrada</fullName>
        <description>Proceso de ventas para Educación Continua Cerrada</description>
        <isActive>true</isActive>
        <values>
            <fullName>Aprobada interna</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Formalizado</fullName>
        </values>
        <values>
            <fullName>Información base</fullName>
        </values>
        <values>
            <fullName>Propuesta academica</fullName>
        </values>
        <values>
            <fullName>Propuesta comercial</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Educacion Continua</fullName>
        <description>Proceso de ventas para Educación Continua</description>
        <isActive>true</isActive>
        <values>
            <fullName>Admitido para pago</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Matrícula financiera</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Aplicación seleccionada</description>
        <label>Application</label>
        <referenceTo>hed__Application__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motives_Loss__c</fullName>
        <label>Motivos de Pérdida</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetName>Motives_Loss</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programa de interes</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No existe programa creado</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>0125e000000a7BDAAY</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Opportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_value__c</fullName>
        <description>Representa el precio asignado al programa</description>
        <label>Valor del programa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <formula>(Program_value__c * (Discount_Percent__c)*100) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor del descuento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <label>Porcentaje de descuento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Desired_Campus__c</fullName>
        <description>The name of the desired campus related to this Opportunity.</description>
        <inlineHelpText>The name of the desired campus related to this Opportunity.</inlineHelpText>
        <label>Desired Campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Main</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nombre_del_programa__c</fullName>
        <formula>Application__r.hed__Applying_To__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>nombre del programa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Completed_FAFSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a FAFSA application related to this Opportunity was completed.</description>
        <inlineHelpText>Indicates whether a FAFSA application related to this Opportunity was completed.</inlineHelpText>
        <label>Completed FAFSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Living_Situation__c</fullName>
        <description>The intended living location related to this Opportunity.</description>
        <inlineHelpText>The intended living location related to this Opportunity.</inlineHelpText>
        <label>Living Situation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Campus</fullName>
                </value>
                <value>
                    <fullName>Off Campus</fullName>
                </value>
                <value>
                    <fullName>With Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Desired_Start_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The desired term to start enrollment related to this Opportunity.</description>
        <inlineHelpText>The desired term to start enrollment related to this Opportunity.</inlineHelpText>
        <label>Desired Start Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Desired_Degree_Level__c</fullName>
        <description>The level of the desired degree related to this Opportunity.</description>
        <inlineHelpText>The level of the desired degree related to this Opportunity.</inlineHelpText>
        <label>Desired Degree Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-degree</fullName>
                    <label>Non-Degree</label>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Application__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2021 12:00 AM</value>
        </filters>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <recordTypes>
        <fullName>Posgrado</fullName>
        <active>true</active>
        <businessProcess>Posgrado</businessProcess>
        <label>Posgrado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pregrado</fullName>
        <active>true</active>
        <businessProcess>Pregrado</businessProcess>
        <label>Pregrado</label>
    </recordTypes>
    <recordTypes>
        <fullName>EDCO_Cerrada</fullName>
        <active>true</active>
        <businessProcess>EDCO Cerrada</businessProcess>
        <description>Proceso de ventas para Educación Continua Cerrada</description>
        <label>EDCO Cerrada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Educaci_n_Continuada</fullName>
        <active>true</active>
        <businessProcess>Educacion Continua</businessProcess>
        <label>Educación Continuada</label>
    </recordTypes>
    <validationRules>
        <fullName>OPP_01</fullName>
        <active>true</active>
        <errorConditionFormula>OR((Discount_Percent__c * 100) &gt; 100, Discount_Percent__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>Discount_Percent__c</errorDisplayField>
        <errorMessage>Error: OPP 01
El porcentaje debe ser un valor entre 0 y 100</errorMessage>
    </validationRules>
</CustomObject>